[package]
name = "proc_route_parser"
description = "A simple parser for the /proc filesystem route file"
version = "0.0.1"
edition = "2024"
authors = ["OpenTritium tritium404@hotmail.com"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/OpenTritium/proc_route_parser"

[dependencies]
thiserror = "2.0.11"
"bitflags" = "2.8.0"
