[package]
name = "proc_route_parser"
description = "A simple parser for the /proc filesystem route file"
version = "0.1.1"
edition = "2024"
authors = ["OpenTritium tritium404@hotmail.com"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/OpenTritium/proc_route_parser"

[dependencies]
thiserror = "2.0.12"
"bitflags" = "2.9.1"

[dev-dependencies]
anyhow = "1.0.66"